# hfta

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/hfta/: HFTokenizer.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/hfta/: HFTokenizer.kt  MainActivity.kt
app/src/main/java/com/example/hfta/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rs-hfta/: Cargo.toml  README.md  run.sh
rs-hfta/src/: lib.rs
